syntax = "proto3";

import "flight.proto";
import "hotel.proto";
import "car.proto";
import "cancel.proto";

service TravelAgency {
    rpc BookTrip (TripRequest) returns (TripResponse) {}
    rpc CancelBookTrip (CancelTripRequest) returns (CancelTripResponse) {}
}

message TripRequest {
    string user_id = 1;
    string trip_type = 2;
    string origin = 3;
    string destination = 4;
    string departure_date = 5;
    string return_date = 6;
    int32 num_people = 7;
    string start_date = 8;
    string end_date = 9;
}

message TripResponse {
    string status = 1;
    string details = 2;
    string flight_id = 3;
    string flight_number = 4;
    string hotel_id = 5;
    string hotel_name = 6;
    string car_id = 7;
    string car_plate = 8;
}
